objects/CCPSync_Stage_Mapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Opportunity_SPP__c</fullName>
        <label>Opportunity SPP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Sales_Stage__c</fullName>
        <label>Opportunity Sales Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quotation_Sales_Stage__c</fullName>
        <label>Quotation Sales Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quotation_Stage__c</fullName>
        <label>Quotation Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CCP Sync Stage Mapping</label>
</CustomObject>